# screaming-frog-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
screaming_frog_mcp/: __init__.py  __main__.py  server.py
skills/technical-seo-scan/: RESEARCH.md  SKILL.md
skills/technical-seo-scan/references/: export-tabs.md  scoring-guide.md
