[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screaming-frog-mcp"
version = "0.2.0"
description = "MCP server for Screaming Frog SEO Spider — crawl sites, export data, and manage crawl storage via AI assistants. Patched for cross-platform support (Mac + Windows)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Boaz Sasson" },
    { name = "U Digital" },
]
keywords = ["mcp", "seo", "screaming-frog", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "mcp",
    "python-dotenv",
    "psutil",
]

[project.scripts]
screaming-frog-mcp = "screaming_frog_mcp:main"

[tool.setuptools.packages.find]
include = ["screaming_frog_mcp*"]

[project.urls]
Homepage = "https://github.com/marykovziridze/screaming-frog-mcp"
